# ferris

./: .gitignore  Cargo.toml  README.md
src/: main.rs  pro1.rs  variable.rs
src/a/: a.rs  mod.rs
src/b/: b.rs  bb.rs  file.rs  generic.rs  lifetime.rs  log.rs  mod.rs  nation.rs  pai.rs  panic.rs  vect.rs
src/example/: hello.rs  mod.rs
src/example/attributes/: cfg.rs  mod.rs
src/example/cli/: grrs.rs  mod.rs  opt.rs
src/example/conversion/: from_into.rs  mod.rs  strings.rs  try_from_into.rs
src/example/crates/: libxs.rlib  mod.rs  public_function.rs  using_lib.rs
src/example/custom_types/: constants.rs  enums.rs  match_use.rs  mod.rs  structures.rs
src/example/error_handling/: combinator_and_then.rs  combinator_map.rs  define_error_type.rs  iterating_over_result.rs  mod.rs  multiple_errors.rs  option_unwrap_example.rs  panic.rs  result_alias.rs  result_map.rs  result_question.rs  unpacking_options.rs
src/example/expressions/: expression.rs  mod.rs
src/example/ext_libs/: clap_usage.rs  git2_usage.rs  log_usage.rs  mod.rs  serde_usage.rs  sled_usage.rs  termcolor_usage.rs
src/example/flow_control/: for_loops.rs  if_let.rs  infinite_loop.rs  match_flow.rs  mod.rs  while_let.rs
src/example/functions/: closure_capturing.rs  closure_input.rs  closure_pars.rs  closures.rs  diverging_functions.rs  fizz_bizz.rs  higher_order_functions.rs  method.rs  mod.rs
src/example/generics/: bounds.rs  functions.rs  generic.rs  implements.rs  mod.rs  multiple_bounds.rs  traits.rs  where_clauses.rs
src/example/hello_world/: debug.rs  display.rs  formatted_print.rs  (+3 more)
(+53 files in other folders)
