[package]
name = "ferris"
version = "0.1.0"
authors = ["ciusji <bqjimaster@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = "2.27.1" # from crateslio
# rand = { git = "https://github.com/rust-lang-nursery/rand" } # from online repo
# bar = { path = "../bar" } # from a path in the local filesystem
