[package]
name = "ferris"
version = "0.1.0"
authors = ["ciusji <bqjimaster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = "2.27.1" # from crateslio
# rand = { git = "https://github.com/rust-lang-nursery/rand" } # from online repo
# bar = { path = "../bar" } # from a path in the local filesystem
structopt = "0.3.13"
termcolor = "1.1"
clap = "2.33.3"
git2 = "0.13.17"
log = "0.4.14"
env_logger = "0.8.3"